updated css recent work

--- a/src/sass/pages/_recentwork.scss
+++ b/src/sass/pages/_recentwork.scss
@@ -1,3 +1,7 @@
+.recent-work {
+    margin-top: 5rem;
+}
+
 .feature-app {
     
     margin-top: 2rem;
@@ -44,4 +48,8 @@
         max-height: 35rem;
         box-shadow: 0 1.5rem 4rem rgba(black, .15);
     }
+}
+
+.recent-work-spacing {
+    padding-bottom: 1rem;
 }
