updated some css home

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,9 +1,13 @@
+
+
 .home-links-container {
     text-align: center;
 
     ul {
         list-style-type: none; 
     }
+
+
 }
 
 .social-links {
@@ -16,7 +20,17 @@
     }
 }
 
-.home-right-container {
-    text-align: center;
-    margin: 0 auto;
+
+
+
+
+
+
+.home-right-box-container {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+
+
+
 }
