--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,7 +1,8 @@
 
 
 .home-links-container {
-    text-align: center;
+    top: 10%;
+    left: 50%;
 
     ul {
         list-style-type: none; 
@@ -19,10 +20,6 @@
         transform: translateY(-1.5rem) scale(1.03);
     }
 }
-
-
-
-
 
 
 
