--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,5 +1,4 @@
 
-
 .home-links-container {
     top: 10%;
     left: 50%;
@@ -7,8 +6,6 @@
     ul {
         list-style-type: none; 
     }
-
-
 }
 
 .social-links {
@@ -21,13 +18,18 @@
     }
 }
 
-
-
 .home-right-box-container {
     position: absolute;
     top: 10%;
     left: 50%;
+}
 
+.home-container {
+    position: relative;
+}
 
+.logo-links {
+    max-width: 80%;
+    padding: 2rem 1rem 1rem 1rem;
 
 }
