--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -24,12 +24,14 @@
     left: 50%;
 }
 
-.home-container {
+.home-logo-links-container {
     position: relative;
+    border-top: 2px solid;
 }
 
 .logo-links {
     max-width: 80%;
+    max-height: 80%;
     padding: 2rem 1rem 1rem 1rem;
 
 }
