updated home and some css

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -19,9 +19,9 @@
 }
 
 .home-right-box-container {
-    position: absolute;
     top: 10%;
     left: 50%;
+    text-align: center;
 }
 
 .home-logo-links-container {
