--- a/src/sass/grid/_grid.scss
+++ b/src/sass/grid/_grid.scss
@@ -32,6 +32,10 @@
         width: calc((100% - 2 * 6rem) / 3);
     }
 
+    .col-2-of-3 {
+        width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem);
+    }
+
     .col-1-of-4 {
         width: calc((100% - 3 * 6rem) / 4);
     }
